--- a/astrogrid/portalB/build.xml
+++ b/astrogrid/portalB/build.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0"?>
 <!--+
     | <cvs:source>$Source: /Users/pharriso/Work/ag/repo/git/astrogrid-mirror/astrogrid/portalB/Attic/build.xml,v $</cvs:source>
-    | <cvs:date>$Author: dave $</cvs:date>
-    | <cvs:author>$Date: 2003/09/29 23:48:21 $</cvs:author>
-    | <cvs:version>$Revision: 1.49 $</cvs:version>
+    | <cvs:date>$Author: pah $</cvs:date>
+    | <cvs:author>$Date: 2003/10/01 12:58:04 $</cvs:author>
+    | <cvs:version>$Revision: 1.50 $</cvs:version>
     | <cvs:log>
     | $Log: build.xml,v $
+    | Revision 1.50  2003/10/01 12:58:04  pah
+    | pick up ant.properties from user $HOME - consistent with community WG
+    |
     | Revision 1.49  2003/09/29 23:48:21  dave
     | Updated bits of the release build
     |
@@ -178,7 +181,7 @@
 	    | This is where to put local properties eg.tomcat installation path.
 	    | tomcat.home=/usr/java/servers/tomcat/jakarta-tomcat-4.1.24-LE-jdk14
 	    +-->
-	<property file="ant.properties"/>
+	<property file="${user.home}/ant.properties"/>
 
 	<!-- Tomcat installation path (default if not in ant.properties) -->
 	<property name="tomcat.home"    value="/usr/java/servers/tomcat/jakarta-tomcat-4.1.24-LE-jdk14"/>
