*** empty log message ***

--- a/astrogrid/jes/config/ASTROGRID_jesmessages.properties
+++ b/astrogrid/jes/config/ASTROGRID_jesmessages.properties
@@ -81,6 +81,7 @@ AGJESE00750=:{0}: Query not found for Job with URN [{1}] and JobStep number [{2}
 AGJESE00760=:{0}: Catalog not found for Query in Job with Job URN [{1}] and JobStep number [{2}]
 AGJESE00770=:{0}: Table not found for Catalog [{1}] in Job with Job URN [{2}] and JobStep number [{3}]
 AGJESE00780=:{0}: Service not found for Catalog [{1}] in Job with Job URN [{2}] and JobStep number [{3}]
+AGJESE00785=:{0}: Location of Datacenter service is missing.
 AGJESE00790=:{0}: Unable to complete find request.
 AGJESE00800=:{0}: Unable to complete update request.
 
