Adding webservice / webdelegate skeletons. Having diffs with wsdl2java-generated class names/structure.

--- a/astrogrid/warehouse/config/template.properties
+++ b/astrogrid/warehouse/config/template.properties
@@ -43,4 +43,4 @@ port.interface.java.class=WarehouseServiceIfc
 
 # This is the name of the class implementing the interface declared
 # by port.interface.java.class, above.
-service.java.class=WarehouseServiceImpl
+service.java.class=WarehouseService
