Finalised interface classes required for end IT4 wk 2:     org.astrogrid.warehouse.delegate.WarehouseDelegateIfc     org.astrogrid.warehouse.service.WarehouseServiceIfc
Changed URL parameter to String parameter in setResultsDestination()
  methods to help with wsdl2java/java2wsdl auto-tooling.

Added package-specific WarehouseException.

Added wsdd files for deploying to Tomcat/Axis, and added temporary
testing harness just to be sure we can deploy to Axis and talk to the
(mostly unimplemented!) web service.

--- a/astrogrid/warehouse/config/build.properties
+++ b/astrogrid/warehouse/config/build.properties
@@ -1,3 +1,4 @@
 java2wsdl.tool=org.apache.axis.wsdl.Java2WSDL
 wsdl.tool=org.apache.axis.wsdl.WSDL2Java
 tomcat.home=/data/cass123a/kea/jakarta-tomcat-4.1.24
+tomcat.host=http://cass111.ast.cam.ac.uk:8080
