--- a/astrogrid/jes/project.properties
+++ b/astrogrid/jes/project.properties
@@ -1,5 +1,18 @@
+
+# ------------------------------------------------------------------------
+# M A V E N  J A R  O V E R R I D E
+# ------------------------------------------------------------------------
+
 # Remote repository location.
 maven.repo.remote=http://www.ibiblio.org/maven/,http://www.astrogrid.org/maven/
+
+#######temporary measure till the repository contains the right jars#######
+maven.jar.override = on
+#Hardwire the locations of the jars we can't find (yet) in the repository
+maven.jar.policy-client = ${basedir}/lib/astrogrid/policy-client-1.0.jar
+maven.jar.authentication-client = ${basedir}/lib/astrogrid/authentication-client-1.0_JLbugfix.jar
+maven.jar.datacenterdelegates = ${basedir}/lib/astrogrid/datacenterdelegates.jar
+###########################################################################
 
 # ChangeLog
 maven.changelog.range=31
@@ -18,4 +31,6 @@ maven.remote.group=cvs
 
 # Test - allow deployment of snapshot even when tests fail
 maven.test.failure.ignore=true
+
+
 
