Commented out some apparently unnecessary dependencies. Normally would just delete them and use CVS to restore if necessary, but a bit worried there might be dependencies here I don't know about.

--- a/astrogrid/jes/project.properties
+++ b/astrogrid/jes/project.properties
@@ -7,6 +7,10 @@
 maven.repo.remote=http://www.ibiblio.org/maven/,http://www.astrogrid.org/maven/
 
 #######temporary measure till the repository contains the right jars#######
+##Note - to build in eclipse following a "maven eclipse"
+##you may need to copy these jars by hand to your local maven
+##repository - there seems to be a bug in maven so it doesn't happen
+##automatically
 maven.jar.override = on
 #Hardwire the locations of the jars we can't find (yet) in the repository
 maven.jar.policy-client = ${basedir}/lib/astrogrid/policy-client-1.0.jar
