--- a/astrogrid/jes/project.properties
+++ b/astrogrid/jes/project.properties
@@ -1,10 +1,9 @@
+# Remote repository location.
+maven.repo.remote=http://www.astrogrid.org/maven/, http://www.ibiblio.org/maven
 
 # ------------------------------------------------------------------------
 # M A V E N  J A R  O V E R R I D E
 # ------------------------------------------------------------------------
-
-# Remote repository location.
-maven.repo.remote=http://www.ibiblio.org/maven/,http://www.astrogrid.org/maven/
 
 #######temporary measure till the repository contains the right jars#######
 ##Note - to build in eclipse following a "maven eclipse"
@@ -36,5 +35,15 @@ maven.remote.group=cvs
 # Test - allow deployment of snapshot even when tests fail
 maven.test.failure.ignore=true
 
+## fork junit - makes classloading more reliable.
+maven.junit.fork=true
 
+# Checkstyle file
+maven.checkstyle.properties=${basedir}/checkstyle.xml
 
+#javadoc. -- fill this in.
+maven.javadoc.links=http://java.sun.com/j2se/1.4.2/docs/api/, http://maven.apache.org/apidocs/
+
+#multiproject
+# continue with others if one fails
+maven.multiproject.ignoreFailures=true
