--- a/astrogrid/workflow/project.properties
+++ b/astrogrid/workflow/project.properties
@@ -1,6 +1,21 @@
 # Remote repository location.
 maven.repo.remote=http://www.ibiblio.org/maven, http://www.astrogrid.org/maven/
 
+# ------------------------------------------------------------------------
+# M A V E N  J A R  O V E R R I D E
+# ------------------------------------------------------------------------
+
+#######temporary measure till the repository contains the right jars#######
+##Note - to build in eclipse following a "maven eclipse"
+##you may need to copy these jars by hand to your local maven
+##repository - there seems to be a bug in maven so it doesn't happen
+##automatically
+maven.jar.override = on
+#Hardwire the locations of the jars we can't find (yet) in the repository
+maven.jar.policy-client = ${basedir}/lib/astrogrid/policy-client-1.0.jar
+maven.jar.authentication-client = ${basedir}/lib/astrogrid/authentication-client-1.0.jar
+###########################################################################
+
 # ChangeLog
 maven.changelog.range=31
 
