tagged workflow,jes,myspace

--- a/astrogrid/astrogrid-project-version.properties
+++ b/astrogrid/astrogrid-project-version.properties
@@ -3,9 +3,9 @@ applications=<CVS_TAG>
 common=<CVS_TAG>
 community=<CVS_TAG>
 datacenter=<CVS_TAG>
-jes=<CVS_TAG>
+jes=Itn03_end
 maven-site=<CVS_TAG>
-mySpace=<CVS_TAG>
+mySpace=Itn03_end
 ogsa=<CVS_TAG>
 portalB=<CVS_TAG>
 registry=<CVS_TAG>
@@ -13,4 +13,4 @@ templateservice=<CVS_TAG>
 tools=<CVS_TAG>
 ui=<CVS_TAG>
 warehouse=<CVS_TAG>
-workflow=<CVS_TAG>
+workflow=Itn03_end
