Just added a CVS version id

--- a/astrogrid/jes/project.properties
+++ b/astrogrid/jes/project.properties
@@ -1,5 +1,10 @@
+#$id$
+
 # Remote repository location.
 maven.repo.remote=http://www.astrogrid.org/maven/, http://www.ibiblio.org/maven
+
+maven.license.licenseFile=${basedir}/LICENSE.txt
+
 
 # ------------------------------------------------------------------------
 # M A V E N  J A R  O V E R R I D E
