is it case sensitive?

--- a/astrogrid/jes/project.properties
+++ b/astrogrid/jes/project.properties
@@ -1,4 +1,4 @@
-# $id$
+# $Id: project.properties,v 1.9 2003/10/28 12:44:44 jdt Exp $
 
 # Remote repository location.
 maven.repo.remote=http://www.astrogrid.org/maven/, http://www.ibiblio.org/maven
