--- a/astrogrid/registryB/build.xml
+++ b/astrogrid/registryB/build.xml
@@ -2,10 +2,13 @@
 <!--+
     | <cvs:source>$Source: /Users/pharriso/Work/ag/repo/git/astrogrid-mirror/astrogrid/registryB/Attic/build.xml,v $</cvs:source>
     | <cvs:author>$Author: KevinBenson $</cvs:author>
-    | <cvs:date>$Date: 2003/10/29 08:43:11 $</cvs:date>
-    | <cvs:version>$Revision: 1.3 $</cvs:version>
+    | <cvs:date>$Date: 2003/10/30 08:43:02 $</cvs:date>
+    | <cvs:version>$Revision: 1.4 $</cvs:version>
     | <cvs:log>
     |   $Log: build.xml,v $
+    |   Revision 1.4  2003/10/30 08:43:02  KevinBenson
+    |   Some new mock stubbs and delegates
+    |
     |   Revision 1.3  2003/10/29 08:43:11  KevinBenson
     |   Okay cleaned up a little of the ant tasks and situated out the delegates and service a little more.
     |
@@ -180,7 +183,7 @@
 		<jar destfile="${project.build}/jar/server/${registry.server.jar}">
 			<!-- Copy our own Java source -->
 			<fileset dir="${registry.classes}">
-			    <exclude name="**/delegate/**" />
+			    <exclude name="**/client/**" />
 			</fileset>
 		</jar>    
 	</target>
