--- a/astrogrid/community/src/webapps/docs/WEB-INF/web.xml
+++ b/astrogrid/community/src/webapps/docs/WEB-INF/web.xml
@@ -2,10 +2,13 @@
 <!--+
     | <cvs:source>$Source: /Users/pharriso/Work/ag/repo/git/astrogrid-mirror/astrogrid/community/src/webapps/docs/WEB-INF/Attic/web.xml,v $</cvs:source>
     | <cvs:author>$Author: dave $</cvs:author>
-    | <cvs:date>$Date: 2003/08/28 17:33:56 $</cvs:date>
-    | <cvs:version>$Revision: 1.1 $</cvs:version>
+    | <cvs:date>$Date: 2003/11/06 15:35:26 $</cvs:date>
+    | <cvs:version>$Revision: 1.2 $</cvs:version>
     | <cvs:log>
     |   $Log: web.xml,v $
+    |   Revision 1.2  2003/11/06 15:35:26  dave
+    |   Replaced tabs with spaces
+    |
     |   Revision 1.1  2003/08/28 17:33:56  dave
     |   Initial policy prototype
     |
@@ -13,7 +16,7 @@
     |
     +-->
 <!DOCTYPE web-app
-	PUBLIC "-//Sun Microsystems, Inc.//DTD Web Application 2.2//EN"
-	"http://java.sun.com/j2ee/dtds/web-app_2.2.dtd">
+    PUBLIC "-//Sun Microsystems, Inc.//DTD Web Application 2.2//EN"
+    "http://java.sun.com/j2ee/dtds/web-app_2.2.dtd">
 <web-app>
 </web-app>
