--- a/astrogrid/astrogrid-project-version.properties
+++ b/astrogrid/astrogrid-project-version.properties
@@ -12,5 +12,5 @@ registry=<CVS_TAG>
 templateservice=<CVS_TAG>
 tools=<CVS_TAG>
 ui=<CVS_TAG>
-warehouse=<CVS_TAG>
+warehouse=<Itn04-2003-11-07>
 workflow=Itn03_end
