Added datacenter integration release tag

--- a/astrogrid/astrogrid-project-version.properties
+++ b/astrogrid/astrogrid-project-version.properties
@@ -2,7 +2,7 @@ ace=<CVS_TAG>
 applications=<CVS_TAG>
 common=<CVS_TAG>
 community=<CVS_TAG>
-datacenter=<CVS_TAG>
+datacenter=<It04-2003-11-07>
 jes=Itn03_end
 maven-site=<CVS_TAG>
 mySpace=Itn03_end
