--- a/astrogrid/applications/project.properties
+++ b/astrogrid/applications/project.properties
@@ -28,3 +28,6 @@ maven.checkstyle.properties=${basedir}/checkstyle.xml
 #javadoc. -- fill this in.
 maven.javadoc.links=http://java.sun.com/j2se/1.4.2/docs/api/, http://maven.apache.org/apidocs/
 
+#multiproject
+# continue with others if one fails
+maven.multiproject.ignoreFailures=true
