--- a/astrogrid/jes/project.properties
+++ b/astrogrid/jes/project.properties
@@ -1,4 +1,4 @@
-# $Id: project.properties,v 1.9 2003/10/28 12:44:44 jdt Exp $
+# $Id: project.properties,v 1.10 2003/11/11 23:59:15 anoncvs Exp $
 
 # Remote repository location.
 maven.repo.remote=http://www.astrogrid.org/maven/, http://www.ibiblio.org/maven
@@ -52,3 +52,6 @@ maven.javadoc.links=http://java.sun.com/j2se/1.4.2/docs/api/, http://maven.apach
 #multiproject
 # continue with others if one fails
 maven.multiproject.ignoreFailures=true
+
+#Make the tasklist report look for Eclipse default todo tags
+maven.tasklist.taskTag=@TODO
