Make sure that JDK1.4 syntax is used.

--- a/astrogrid/jes/project.properties
+++ b/astrogrid/jes/project.properties
@@ -1,4 +1,4 @@
-# $Id: project.properties,v 1.10 2003/11/11 23:59:15 anoncvs Exp $
+# $Id: project.properties,v 1.11 2003/11/12 18:09:32 jdt Exp $
 
 # Remote repository location.
 maven.repo.remote=http://www.astrogrid.org/maven/, http://www.ibiblio.org/maven
@@ -37,6 +37,15 @@ maven.repo.central=www.astrogrid.org
 maven.repo.central.directory=/var/www/www/maven
 maven.remote.group=cvs
 
+#Allow assert keyword
+maven.compile.source = 1.4
+maven.compile.target = 1.4
+maven.javadoc.source = 1.4
+maven.test.source = 1.4
+
+#This is the default todo tag used in Eclipse
+maven.tasklist.taskTag=@TODO
+
 # Test - allow deployment of snapshot even when tests fail
 maven.test.failure.ignore=true
 
@@ -52,6 +61,3 @@ maven.javadoc.links=http://java.sun.com/j2se/1.4.2/docs/api/, http://maven.apach
 #multiproject
 # continue with others if one fails
 maven.multiproject.ignoreFailures=true
-
-#Make the tasklist report look for Eclipse default todo tags
-maven.tasklist.taskTag=@TODO
