ApplicationsWG weekly tag

--- a/astrogrid/astrogrid-project-version.properties
+++ b/astrogrid/astrogrid-project-version.properties
@@ -1,9 +1,9 @@
 ace=<CVS_TAG>
-applications=<CVS_TAG>
+applications=Itn04_2003_11_14
 common=<CVS_TAG>
 community=<CVS_TAG>
 datacenter=<It04-2003-11-07>
-jes=Itn03_end
+jes=Itn04_2003_11_14
 maven-site=<CVS_TAG>
 mySpace=Itn03_end
 ogsa=<CVS_TAG>
