--- a/astrogrid/datacenter/server/project.properties
+++ b/astrogrid/datacenter/server/project.properties
@@ -12,6 +12,11 @@ maven.ui.section.background=#00f
 maven.ui.banner.background=#00f
 
 # Deployment
+maven.repo.list=astrogrid
+maven.repo.astrogrid=sftp://www.astrogrid.org
+maven.repo.astrogrid.directory=/var/www/www/maven
+maven.repo.astrogrid.group=cvs
+
 maven.repo.central=www.astrogrid.org
 maven.repo.central.directory=/var/www/www/maven
 maven.remote.group=cvs
@@ -19,7 +24,7 @@ maven.remote.group=cvs
 # Test - allow deployment of snapshot even when tests fail
 maven.test.failure.ignore=true
 
-## fork junit - makes classloading more reliable.
+## fork junit - makes classloading more reliable., but tests slower
 maven.junit.fork=true
 
 # Checkstyle file
@@ -29,8 +34,13 @@ maven.checkstyle.properties=${basedir}/checkstyle.xml
 maven.javadoc.links=http://java.sun.com/j2se/1.4.2/docs/api/, http://maven.apache.org/apidocs/
 
 #multiproject
-# continue with others if one fails
-maven.multiproject.ignoreFailures=true
-maven.multiproject.includes=*/project.xml,implementations/*/project.xml
-#maven.multiproject.includes=**/project.xml
+# generate a jar delivable.
+maven.multiproject.type=jar
+
+# allow assertions
+maven.compile.source=1.4
+maven.compile.target=1.4
+maven.javadoc.source=1.4
+maven.test.source=1.4
+
 
