Single property for shelled-out JVM class directory;  jar files in this directory are automatically added to the shelled-out JVM classpath.

--- a/astrogrid/warehouse/src/java/org/astrogrid/warehouse/service/WarehouseServiceImpl.properties
+++ b/astrogrid/warehouse/src/java/org/astrogrid/warehouse/service/WarehouseServiceImpl.properties
@@ -1,8 +1,18 @@
 # -------------------------------------------
-# Location of OGSA(-DAI)-configured JVM for shelling out to
-# in Axis version of service
+# Location of JVM for shelling out to in Axis version of service
+WAREHOUSE_JVM=/data/cass123a/kea/j2sdk1.4.1_01/bin/java
 
-WAREHOUSE_JVM=/data/cass123a/gtr/jdk-ogsa/bin/java
-#WAREHOUSE_JVM=java
-WAREHOUSE_CLASSPATH=/data/cass123a/kea/tomcat_cass111/webapps/axis/WEB-INF/classes
+# -------------------------------------------
+# Name of class to invoke new JVM with
 WAREHOUSE_SERVICE=org.astrogrid.warehouse.service.WarehouseServiceImpl
+
+# -------------------------------------------
+# Classpath elements for shelled-out JVM:
+
+# Location of Warehouse classes
+WAREHOUSE_CLASSPATH=/data/cass123a/kea/jakarta-tomcat-4.1.24/webapps/axis/WEB-INF/classes
+
+# Location of (single) directory containing all necessary jars for running
+# the service from the commandline.  
+#  NB:  You MUST use the version of axis.jar supplied with OGSA(-DAI)!!!!
+WAREHOUSE_JARDIR=/data/cass123a/kea/jakarta-tomcat-4.1.24/webapps/axis/WEB-INF/lib/
