--- a/astrogrid/datacenter/implementations/sixdF/project.properties
+++ b/astrogrid/datacenter/implementations/sixdF/project.properties
@@ -6,6 +6,7 @@ maven.changelog.range=31
 
 # Development process URL
 maven.xdoc.developmentProcessUrl=http://wiki.astrogrid.org/bin/view/Astrogrid/DevelopmentDocs
+
 # UI
 maven.ui.section.background=#00f
 maven.ui.banner.background=#00f
@@ -27,6 +28,7 @@ maven.checkstyle.properties=${basedir}/checkstyle.xml
 #javadoc. -- fill this in.
 maven.javadoc.links=http://java.sun.com/j2se/1.4.2/docs/api/, http://maven.apache.org/apidocs/
 
+
 #multiproject
-# continue with others if one fails
-maven.multiproject.ignoreFailures=true
+# generate a jar delivable.
+maven.multiproject.type=jar
