first attempt at pal

--- a/astrogrid/datacenter/pal/project.properties
+++ b/astrogrid/datacenter/pal/project.properties
@@ -6,7 +6,7 @@ maven.changelog.range=31
 
 # Development process URL
 maven.xdoc.developmentProcessUrl=http://wiki.astrogrid.org/bin/view/Astrogrid/DevelopmentDocs
-maven.xdoc.includeProjectDocumentation=no
+#maven.xdoc.includeProjectDocumentation=no
 # UI
 maven.ui.section.background=#00f
 maven.ui.banner.background=#00f
@@ -43,4 +43,7 @@ maven.compile.target=1.4
 maven.javadoc.source=1.4
 maven.test.source=1.4
 
+
+#license
+maven.license.licenseFile=${basedir}/../LICENSE.txt
 
