--- a/astrogrid/datacenter/pal/project.properties
+++ b/astrogrid/datacenter/pal/project.properties
@@ -35,7 +35,9 @@ maven.javadoc.links=http://java.sun.com/j2se/1.4.2/docs/api/, http://maven.apach
 
 #multiproject
 # generate a war delivable.
-maven.multiproject.type=war
+# this is a hack for now - generate a dummy jar, then generate a war later 
+#necessary, because artifact:war seems to have bugs when interacting with multiproject.
+maven.multiproject.type=jar
 
 # allow assertions
 maven.compile.source=1.4
