--- a/astrogrid/mySpace/configFiles/ASTROGRID_myspacemanagermessages.properties
+++ b/astrogrid/mySpace/configFiles/ASTROGRID_myspacemanagermessages.properties
@@ -1,119 +1,98 @@
 # This first entry is control information. Please do not alter or remove...
 SUBSYSTEM=MMC
 
-AGMMCZ00001=AGDTCZ00001:MySpaceManager: Could not read my configuration file {0}
-AGMMCZ00002=AGDTCZ00002:MySpaceManager: Not initialized. Perhaps my configuration file is missing.
+AGMMCZ00001=AGDTCZ00001:MySpaceManager: Could not read configuration file {0}
+AGMMCZ00002=AGDTCZ00002:MySpaceManager: Not initialised; is configuration file missing?
 AGMMCZ00003=AGDTCZ00003:Message: Message key is null.
 AGMMCZ00004=AGDTCZ00004:Message: Message pattern or inserts are invalid
 AGMMCZ00005=AGDTCZ00005:Message: Message not found in ResourceBundle
 
-#MS_E_REGDWRT=Failed to write registry data file.
-AGMMCE00030=:{0}:Failed to write registry data file.
-#MS_E_REGDCRT=Registry data file is corrupt.
-AGMMCE00031=:{0}:Registry data file is corrupt
-#MS_E_REGDRED=Failed to read registry data file.
-AGMMCE00032=:{0}:Failed to read registry data file.
-#MS_E_DHNTFND=Requested Data Holder not found.
-AGMMCE00033=:{0}:Requested Data Holder not found.
-#MS_I_NDHMTCH=No Data Holders matched query string.
-AGMMCE00034=:{0}:No Data Holders matched query string.
-#MS_E_FLCRTDH=Failed to create Data Holder.
-AGMMCE00035=:{0}:Failed to create Data Holder.
-#MS_E_FCRTDHR=Failed to create Data Holder (registry update failure).
-AGMMCE00036=:{0}:Failed to create Data Holder (registry update failure).
-#MS_E_CPYDHCN=Attempt to copy a container instead of a Data Holder.
-AGMMCE00037=:{0}:Attempt to copy a container instead of a Data Holder.
-#MS_E_FLMOVDH=Failed to move Data Holder.
-AGMMCE00038=:{0}:Failed to move Data Holder.
-#MS_E_MOVDHCN=Attempt to move a container instead of a Data Holder.
-AGMMCE00039=:{0}:Attempt to move a container instead of a Data Holder.
-#MS_E_FACCSDH=Cannot access Data Holder.
-AGMMCE00040=:{0}:Cannot access Data Holder.
-#MS_E_FNTCNDH=Item is neither a container nor a Data Holder.
-AGMMCE00041=:{0}:Item is neither a container nor a Data Holder.
-#MS_E_FLCRTCN=Failed to create container.
-AGMMCE00042=:{0}:Failed to create container.
-#MS_E_DNEMPCN=Attempt to delete a container which is not empty.
-AGMMCE00043=:{0}:Attempt to delete a container which is not empty.
-#MS_E_FLDELDH=Failed to delete Data Holder.
-AGMMCE00044=:{0}:Failed to delete Data Holder.
-#MS_E_NTPERDH=User not permitted to delete this Data Holder or container.
-AGMMCE00045=:{0}:User not permitted to delete this Data Holder or container.
-#MS_E_NPRWPCN=User not permitted to write to parent container.
-AGMMCE00046=:{0}:User not permitted to write to parent container.
-#MS_E_PCNNTEX=The parent container does not exist.
-AGMMCE00047=:{0}:The parent container does not exist.
-#MS_E_DHCNAEX=Data Holder or container already exists.
-AGMMCE00048=:{0}:Data Holder or container already exists.
-#MS_E_UPLOAD=Error Uploading file from datacentre.
-AGMMCE00049=:{0}:There is an io exception whild building response xml.
+#
+# General error codes.
+
+AGMMCE00030=({0}) Error writing error codes to standard output.
+AGMMCE00031=({0}) Class not found.
+
+AGMMCE00050=({0}) User is not authorised for operation attempted.
+
+#
+# Error codes for the mySpace registry.
+
+AGMMCE00100=({0}) Failed to create registry manager object.
+AGMMCE00101=({0}) Failed to write registry data file.
+AGMMCE00102=({0}) Registry data file is corrupt (contains unrecognised object).
+AGMMCE00103=({0}) Failed to read registry data file.
+AGMMCE00104=({0}) No servers specified in the registry configuration file.
+AGMMCE00105=({0}) Failed to read the registry configuration file.
+AGMMCE00106=({0}) Failed to access item in registry.
+AGMMCE00107=({0}) Failed to access server details.
+
+#
+# Warning codes for the mySpace registry.
+
+AGMMCW00150=({0}) Invalid expiry period in the registry configuration file.
+AGMMCW00151=({0}) Invalid server details in the registry configuration file.
+AGMMCW00152=({0}) Expiry period not set; default adopted.
+AGMMCW00153=({0}) Illegal expiry period in registry configuration file.
+AGMMCW00154=({0}) Registry configuration contains an invalid server entry.
 
 
-#MS_W_RGCEXPI=Invalid expiry period in the registry configuration file.
-AGMMCW00030=:{0}:Invalid expiry period in the registry configuration file.
-#MS_W_RGCSRVI=Invalid server details in the registry configuration file.
-AGMMCW00031=:{0}:Invalid server details in the registry configuration file.
-#MS_W_RGCWXPM=Expiry period not set; default adopted.
-AGMMCW00032=:{0}:Expiry period not set; default adopted.
-#MS_W_RGCEXPM=To be defined.
-AGMMCW00032=:{0}:To be defined.
+#
+# General error codes for the registry manager, mostly to do with
+# manipulating dataHolders.
+
+AGMMCE00201=({0}) Requested Data Holder not found.
+AGMMCE00202=({0}) Failed to create Data Holder.
+AGMMCE00203=({0}) Failed to create Data Holder (registry update failure).
+AGMMCE00204=({0}) Attempt to copy a container instead of a Data Holder.
+AGMMCE00205=({0}) Failed to move Data Holder.
+AGMMCE00206=({0}) Attempt to move a container instead of a Data Holder.
+AGMMCE00207=({0}) Cannot access Data Holder.
+AGMMCE00208=({0}) Item is neither a container nor a Data Holder.
+AGMMCE00209=({0}) Failed to create container.
+AGMMCE00210=({0}) Attempt to delete a container which is not empty.
+AGMMCE00211=({0}) Failed to delete Data Holder.
+AGMMCE00212=({0}) User not permitted to delete this Data Holder or container.
+AGMMCE00213=({0}) User not permitted to write to parent container.
+AGMMCE00214=({0}) The parent container does not exist.
+AGMMCE00215=({0}) Data Holder or container already exists.
+AGMMCE00216=({0}) I/O exception while building response XML.
+AGMMCE00217=({0}) Error look up dataholderS details.
+AGMMCE00218=({0}) Error look up dataholder details.
+AGMMCE00219=({0}) Error Exporting Data Holder.
+AGMMCE00220=({0}) Failed to delete container.
+AGMMCE00221=({0}) Failed to delete user.
+
+#
+# Informational codes.
+
+AGMMCI00250=({0}) No Data Holders matched query string.
 
 
-#MS_E_RGCSRVM=No servers specified in the registry configuration file.
-AGMMCE00050=:{0}: No servers specified in the registry configuration file.
-#MS_E_RGCDRED=Failed to read the registry configuration file.
-AGMMCE00051=:{0}:Failed to read the registry configuration file.
-#MS_E_SRVINVN=Invalid server name.
-AGMMCE00052=:{0}:Invalid server name.
-#MS_E_ILLSRCN=Illegal attempt to create or modify user or server containers.
-AGMMCE00053=:{0}:Illegal attempt to create or modify user or server containers.
-#MS_E_LOOKUP_DATAHOLDERS=Error look up dataholderS details.
-AGMMCE00054=:{0}:Error look up dataholderS details.
-#MS_E_LOOKUP_DATAHOLDER=Error look up dataholder details.
-AGMMCE00055=:{0}:Error look up dataholder details.
-#MS_E_EXPORT=Error Exporting Data Holder.
-AGMMCE00056=:{0}:Error Exporting Data Holder.
+#
+# Codes to do with servers.
 
+AGMMCE00300=({0}) Invalid server name.
+AGMMCE00301=({0}) Illegal attempt to create or modify user or server containers.
 
-#MS_E_REGDCPT=Class not found.
-AGMMCE00060=:{0}: Class not found.
+#
+# MySpaceServer error codes.
 
+AGMSCE01000=({0}) No file to delete; check file path and try again.
+AGMSCE01001=({0}) No file to save; check file path and try again.
+AGMSCE01002=({0}) Error Reading from file.
+AGMSCE01003=({0}) Error parsing xmlRequest in MySpaceUtils.parseRequest.
+AGMSCE01004=({0}) Error Casting from String to int.
+AGMSCE01005=({0}) Error Calling MySpace ServerManager.
+AGMSCE01006=({0}) Null pointer getting one or more of the attributes from request string in MySpace.
 
-#############MySpaceServer
-#NULL_FILE_DELETE=There is no file to delete, check your file path and try again.otherwise this fuction is failed!!
-AGMSCE00030=:{0}:There is no file to delete, check your file path and try again.otherwise this fuction is failed!!
-#NULL_FILE_SAVE=There is no file to save, check file path and try again.
-AGMSCE00031=:{0}:There is no file to save, check file path and try again.
-#ERROR_READING_FILE=Error Reading from file.
-AGMSCE00032=:{0}:Error Reading from file.
-#PARSE_REQUEST_ERROR=Error parsing xmlRequest in MySpaceUtils.parseRequest.
-AGMSCE00033=:{0}:Error parsing xmlRequest in MySpaceUtils.parseRequest.
-#NUMBER_FORMAT_ERROR=Error Casting from String to int.
-AGMSCE00034=:{0}:Error Casting from String to int.
-#ERROR_CALL_SERVER_MANAGER=Error Calling MySpace ServerManager.
-AGMSCE00035=:{0}:Error Calling MySpace ServerManager.
-#NULL_POINTER_GETTING_REQUEST=Null pointer getting one or more of the attributes from request string in MySpace.
-AGMSCE00036=:{0}:Null pointer getting one or more of the attributes from request string in MySpace.
-
-#ERR_SAVE_DATAHOLDER=Error Saving DataHolder.
-AGMSCE00040=:{0}:Error Saving DataHolder.
-#MOVE_DATA_HOLDER_ERROR=Error Moving DataHolder.
-AGMSCE00041=:{0}:Error Moving DataHolder.
-#DATA_HOLDER_MOVED=Data Holder has been moved.
-AGMSCE00042=:{0}:Data Holder has been moved.
-#ERR_COPY_DATA_HOLDER=Error Copying DataHolder.
-AGMSCE00043=:{0}:Error Copying DataHolder.
-#DATA_HOLDER_COPIED=Data Holder Has Been Copied. 
-AGMSCE00044=:{0}:Data Holder Has Been Copied. 
-#ERR_SECURITY_DELETE_DATA_HOLDER=Can't delete the data holder because of security issues.
-AGMSCE00045=:{0}:Can't delete the data holder because of security issues.
-#ERR_DELETE_DATA_HOLDER=Unkown Error occourd whild deleting data holder.
-AGMSCE00046=:{0}:Unkown Error occourd whild deleting data holder.
-#FILE_NOT_EXIST=File not exist!
-AGMSCE00047=:{0}:File not exist!
-#ERR_IO_BUILD_RESPONS=There is an io exception whild building response xml.
-AGMSCE00048=:{0}:There is an io exception whild building response xml.
-
-
-
+AGMSCE01040=({0}) Error Saving DataHolder.
+AGMSCE01041=({0}) Error Moving DataHolder.
+AGMSCE01042=({0}) Data Holder has been moved.
+AGMSCE01043=({0}) Error Copying DataHolder.
+AGMSCE01044=({0}) Data Holder has Been Copied. 
+AGMSCE01045=({0}) Cannot delete DataHolder because of security issues.
+AGMSCE01046=({0}) Unkown Error while deleting data holder.
+AGMSCE01047=({0}) File does not exist.
+AGMSCE01048=({0}) I/O exception while building response XML.
 
