*** empty log message ***

--- a/astrogrid/datacenter/client/project.properties
+++ b/astrogrid/datacenter/client/project.properties
@@ -19,7 +19,7 @@ maven.remote.group=cvs
 # see http://nagoya.apache.org/eyebrowse/ReadMsg?listName=users@maven.apache.org&msgNo=8046
 # and http://maven.apache.org/reference/plugins/artifact/examples.html
 maven.repo.list=astrogrid
-maven.repo.astrogrid=file:/var/www/www/
+maven.repo.astrogrid=file://var/www/www/
 maven.repo.astrogrid.directory=maven
 maven.repo.astrogrid.username=maven
 maven.repo.astrogrid.group=cvs
